@@ -47,7 +47,7 @@ bool doQuit(void *p,void* ud)
 
 bool menuCB(void *p,void* ud)
 {
-	printf("Label=%s Userdata=%i\n",static_cast<LFSTK_gadgetClass*>(p)->LFSTK_getLabel(),ud);
+	printf("Label=%s Userdata=%i\n",static_cast<LFSTK_gadgetClass*>(p)->LFSTK_getLabel().c_str(),ud);
 	static_cast<LFSTK_gadgetClass*>(p)->wc->LFSTK_hideWindow();
 	return(true);	
 }
@@ -109,29 +109,25 @@ int main(int argc, char **argv)
 	wc->LFSTK_clearWindow(true);
 
 	menuStruct	**mms=new menuStruct*[MAINNUMMENUS];
-
 	for (int j=0; j<MAINNUMMENUS; j++)
 		{
 			mms[j]=new menuStruct;
-			asprintf(&mms[j]->label,"menu %i",j);
+			//asprintf(&mms[j]->label,"menu %i",j);
+			mms[j]->label="menu "+std::to_string(j);
 			mms[j]->hasSubMenu=false;
 			mms[j]->subMenus=NULL;
 			mms[j]->userData=USERDATA(j+1);
 			mms[j]->imageType=NOTHUMB;
 		}
-	free(mms[1]->label);
-	mms[1]->label=strdup("--");
-	free(mms[2]->label);
-	mms[2]->label=strdup("A really long label that will expand the menu width");
-
-	free(mms[3]->label);
-	mms[3]->label=strdup("--");
+	mms[1]->label="--";
+	mms[2]->label="A really long label that will expand the menu width";
+	mms[3]->label="--";
 	mms[0]->imageType=FILETHUMB;
-	mms[0]->data.imagePath=strdup("./AspellGUI.png");
+	mms[0]->imagePath="./AspellGUI.png";
 	mms[1]->imageType=FILETHUMB;
-	mms[1]->data.imagePath=strdup("./casper2.JPG");
+	mms[1]->imagePath="./casper2.JPG";
 	mms[4]->imageType=CAIROTHUMB;
-	mms[4]->data.surface=wc->globalLib->LFSTK_createSurfaceFromPath("./ManPageEditor.png");
+	mms[4]->surface=wc->globalLib->LFSTK_createSurfaceFromPath("./ManPageEditor.png");
 
 	mms[2]->hasSubMenu=true;
 	mms[2]->subMenuCnt=SUB1NUMMENUS;
@@ -139,7 +135,7 @@ int main(int argc, char **argv)
 	for (int j=0; j<SUB1NUMMENUS; j++)
 		{
 			mms[2]->subMenus[j]=new menuStruct;
-			asprintf(&mms[2]->subMenus[j]->label,"sub menu -2 %i",j);
+			mms[2]->subMenus[j]->label="sub menu 2 "+std::to_string(j);
 			mms[2]->subMenus[j]->hasSubMenu=false;
 			mms[2]->subMenus[j]->subMenus=NULL;
 			mms[2]->subMenus[j]->userData=USERDATA((j+1)*100);
@@ -153,19 +149,16 @@ int main(int argc, char **argv)
 	for (int j=0; j<SUB2NUMMENUS; j++)
 		{
 			mms[6]->subMenus[j]=new menuStruct;
-			asprintf(&mms[6]->subMenus[j]->label,"sub menu 6 - %i",j);
+			mms[6]->subMenus[j]->label="sub menu 6 "+std::to_string(j);
 			mms[6]->subMenus[j]->hasSubMenu=false;
 			mms[6]->subMenus[j]->subMenus=NULL;
 			mms[6]->subMenus[j]->userData=USERDATA((j+1)*10000);
 			mms[6]->subMenus[j]->imageType=FILETHUMB;
-			mms[6]->subMenus[j]->data.imagePath=strdup("./computer.png");
+			mms[6]->subMenus[j]->imagePath="./computer.png";
 		}
 
-	free(mms[6]->subMenus[12]->label);
-	mms[6]->subMenus[12]->label=strdup("--");
-	free(mms[6]->subMenus[5]->label);
-	mms[6]->subMenus[5]->label=strdup("--");
-
+	mms[6]->subMenus[12]->label="--";
+	mms[6]->subMenus[5]->label="--";
 	mms[6]->subMenus[4]->hasSubMenu=true;
 	mms[6]->subMenus[4]->subMenuCnt=SUBSUB1NUMMENUS;
 
@@ -173,12 +166,12 @@ int main(int argc, char **argv)
 	for (int j=0; j<SUBSUB1NUMMENUS; j++)
 		{
 			mms[6]->subMenus[4]->subMenus[j]=new menuStruct;
-			asprintf(&mms[6]->subMenus[4]->subMenus[j]->label,"sub sub menu 6 - %i",j);
+			mms[6]->subMenus[4]->subMenus[j]->label="sub menu 6 - "+std::to_string(j);
 			mms[6]->subMenus[4]->subMenus[j]->hasSubMenu=false;
 			mms[6]->subMenus[4]->subMenus[j]->subMenus=NULL;
 			mms[6]->subMenus[4]->subMenus[j]->userData=(void*)(long)((j+1)*100000);
 			mms[6]->subMenus[4]->subMenus[j]->imageType=FILETHUMB;
-			mms[6]->subMenus[4]->subMenus[j]->data.imagePath=strdup("./audio-speakers.png");
+			mms[6]->subMenus[4]->subMenus[j]->imagePath="./audio-speakers.png";
 		}
 
 	menu->LFSTK_setMouseCallBack(NULL,menuCB,NULL);
