@@ -37,6 +37,8 @@ export MAKEFLAGS
 export PATH
 BUILDOLDWM=0
 CWD=$(pwd)
+ONERROR=true
+unset CFLAGS CXXFLAGS
 
 if [ $BUILDOLDWM -eq 1 ];then
 	BUILDLFSWMANAGER="LFSWManager"
@@ -54,7 +56,7 @@ BUILDFOR=${BUILDFOR:-"LFSToolKit $BUILDLFSWMANAGER LFSWM2 LFSDesktop LFSSetWallp
 runCommand ()
 {
 	echo -e "${RED}Running $1 in ${GREEN}$app${RED} ... ${NORMAL}"
-	$1||true
+	$1||$ONERROR
 }
 
 help ()
@@ -69,7 +71,7 @@ help ()
 	echo -e "${RED}deploy\n\t${NORMAL}run 'make distclean;./autogen.sh --prefix=/usr --libdir=/usr/lib${LIBDIRSUFFIX};make $MAKEFLAGS;make install' on all project folders"
 	echo -e "${RED}deploytest\n\t${NORMAL}run 'make distclean;./autogen.sh --prefix=/usr --libdir=/usr/lib${LIBDIRSUFFIX};make $MAKEFLAGS;make install DESTDIR=/tmp/lfsdesktop-deploy' on all project folders"
 	echo -e "${RED}makeit\n\t${NORMAL}run './autogen.sh --prefix=/usr --libdir=/usr/lib${LIBDIRSUFFIX};make $MAKEFLAGS' on all project folders"
-	echo -e "${RED}makelocal\n\t${NORMAL}run './autogen.sh --prefix=/usr --libdir=/usr/lib${LIBDIRSUFFIX} on LFSToolkit and\nCFLAGS=\"-Wfatal-errors -I/media/LinuxData/Development/Projects/LFSDesktopProject/LFSToolKit/LFSToolKit/lfstk -L/media/LinuxData/Development/Projects/LFSDesktopProject/LFSToolKit/LFSToolKit/app/.libs\" CXXFLAGS=\"$CFLAGS\" ./configure --prefix=/usr;make $MAKEFLAGS' on all ther project folders"
+	echo -e "${RED}makelocal\n\t${NORMAL}run './autogen.sh --prefix=/usr --libdir=/usr/lib${LIBDIRSUFFIX} on LFSToolkit and\nCFLAGS=\"-Wfatal-errors -I/media/LinuxData/Development/Projects/LFSDesktopProject/LFSToolKit/LFSToolKit/lfstk -L/media/LinuxData/Development/Projects/LFSDesktopProject/LFSToolKit/LFSToolKit/app/.libs\" CXXFLAGS=\"\$CFLAGS\" ./configure --prefix=/usr;make $MAKEFLAGS' on all ther project folders"
 	echo -e "${RED}ownit\n\t${NORMAL}run 'chown -vR $CHANGEUSER:$CHANGEUSER .;find -mindepth 1 -exec touch {} ;' on all project folders"
 }
 
@@ -116,9 +118,9 @@ makelocal ()
 {
 	unset CFLAGS CXXFLAGS
 	if [[ "$(basename "$(pwd)")" = "LFSToolKit" ]];then
-		#runCommand "./autogen.sh --prefix=/usr --libdir=/usr/lib${LIBDIRSUFFIX}"
-		:
+		runCommand "./autogen.sh --prefix=/usr --libdir=/usr/lib${LIBDIRSUFFIX}"
 	else
+		ONERROR=false
 		CFLAGS="-O0 -g -Wfatal-errors -I${CWD}/LFSToolKit/LFSToolKit/lfstk/ -L${CWD}/LFSToolKit/LFSToolKit/app/.libs"
 		CXXFLAGS="$CFLAGS"
 		export CFLAGS CXXFLAGS
