@@ -1,4 +1,5 @@
 0.2.0
+Fixed volume slider icon AGAIN!.
 Fixed volume slider icon.
 Fixed setting absolute position of panels.
 Added extra prefs to handle transparent windows, etc.
